--- a/Views/AppDetailView.xaml
+++ b/Views/AppDetailView.xaml
@@ -47,6 +47,11 @@
                                HorizontalAlignment="Stretch"
                                x:Name="_APP_IMAGE"
                                Stretch="Fill"
+                               MinWidth="220"
+                               MaxWidth="220"
+                               Width="220"
+                               MinHeight="320"
+                               MaxHeight="320"
                                Height="320"
                                Cursor="Hand"
                                RenderOptions.BitmapScalingMode="LowQuality"
