--- a/Views/LoginControl.xaml
+++ b/Views/LoginControl.xaml
@@ -11,7 +11,7 @@
              d:DesignHeight="318">
     <md:Transitioner SelectedIndex="{Binding UserLoginViewModel.LoginProgressStateIndex,Mode=OneWay,FallbackValue=0}">
         <md:Transitioner.Resources>
-            <Style TargetType="md:TransitionerSlide">
+            <Style TargetType="md:TransitionerSlide" BasedOn="{StaticResource {x:Type md:TransitionerSlide}}">
                 <Setter Property="BackwardWipe">
                     <Setter.Value>
                         <md:SlideWipe Direction="Right"
@@ -34,7 +34,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Border Grid.Column="0"
-                        Background="{StaticResource PrimaryHueDarkBrush}"
+                        Background="{StaticResource MaterialDesignDarkBackground}"
                         CornerRadius="8,0,0,8">
                     <Label VerticalAlignment="Center"
                            HorizontalAlignment="Center"
@@ -46,7 +46,7 @@
                 <Border Grid.Column="1"
                         Margin="1" />
                 <Border Grid.Column="2"
-                        Background="{StaticResource PrimaryHueDarkBrush}"
+                        Background="{StaticResource MaterialDesignDarkBackground}"
                         CornerRadius="0,8,8,0">
                     <Grid Grid.Column="1">
                         <Grid.ColumnDefinitions>
@@ -99,7 +99,7 @@
             </Grid>
         </md:TransitionerSlide>
         <md:TransitionerSlide>
-            <Border Background="{StaticResource PrimaryHueDarkBrush}"
+            <Border Background="{StaticResource MaterialDesignDarkBackground}"
                     CornerRadius="8">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -136,7 +136,7 @@
             </Border>
         </md:TransitionerSlide>
         <md:TransitionerSlide>
-            <Border Background="{StaticResource PrimaryHueDarkBrush}"
+            <Border Background="{StaticResource MaterialDesignDarkBackground}"
                     CornerRadius="8">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -159,7 +159,7 @@
             </Border>
         </md:TransitionerSlide>
         <md:TransitionerSlide>
-            <Border Background="{StaticResource PrimaryHueDarkBrush}"
+            <Border Background="{StaticResource MaterialDesignDarkBackground}"
                     CornerRadius="8">
                 <Grid>
                     <Grid.ColumnDefinitions>
