--- a/Views/ShopView.xaml
+++ b/Views/ShopView.xaml
@@ -56,7 +56,7 @@
                          FontSize="24"
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          md:TextFieldAssist.TextFieldCornerRadius="2"
-                         md:HintAssist.IsFloating="False"                        
+                         md:HintAssist.IsFloating="False"
                          md:TextFieldAssist.HasFilledTextField="True">
                     <TextBox.InputBindings>
                         <KeyBinding Key="Esc"
@@ -101,6 +101,7 @@
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <controls:VirtualizingWrapPanel ChildWidth="200"
+                                                        MaxHeight="2092"
                                                         ChildHeight="300" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
@@ -116,7 +117,6 @@
                     CornerRadius="4"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Center">
-
                 <Border.Background>
                     <SolidColorBrush Color="White"
                                      Opacity="0.1" />
@@ -162,7 +162,9 @@
                                     </Style.Triggers>
                                 </Style>
                             </Button.Style>
-                            <md:PackIcon Kind="DeleteEmpty" Width="32" Height="32" />
+                            <md:PackIcon Kind="DeleteEmpty"
+                                         Width="32"
+                                         Height="32" />
                         </Button>
                     </Grid>
                     <Separator Grid.Row="1" />
@@ -197,6 +199,7 @@
                         <TextBlock Grid.Column="1"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Right"
+                                   Margin="4"
                                    Style="{StaticResource MaterialDesignTitleTextBlock}"
                                    Text="{wd:CultureAwareBinding Order.Total,StringFormat=C2}" />
 
@@ -208,6 +211,7 @@
                                    HorizontalAlignment="Right" />
                         <TextBlock Grid.Column="1"
                                    Grid.Row="1"
+                                   Margin="4"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Right"
                                    Style="{StaticResource MaterialDesignTitleTextBlock}"
@@ -221,56 +225,110 @@
                                    HorizontalAlignment="Right" />
                         <TextBlock Grid.Column="1"
                                    Grid.Row="2"
+                                   Margin="4"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Right"
                                    Style="{StaticResource MaterialDesignTitleTextBlock}"
                                    Text="{wd:CultureAwareBinding Order.Award}" />
                     </Grid>
+
                     <Grid Grid.Row="4"
+                          ClipToBounds="False"
                           x:Name="_PAYMENT">
                         <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <TextBlock Text="{lex:LocText Key=PRODUCT_ORDER_PAYMENT_METHOD}"
-                                       Style="{StaticResource MaterialDesignBody2TextBlock}"
-                                       Margin="2" />
-                            <Separator Grid.Row="1" />
-                        </Grid>
 
-                        <ListBox Grid.Row="1"
-                                 DataContext="{Binding Order}"
-                                 SelectedValue="{Binding PaymentMethodId}"
-                                 SelectedValuePath="PaymentMethodId"
-                                 ItemsSource="{Binding PaymentMethods}">
-                            <ListBox.ItemTemplate>
+                        <ComboBox Grid.Row="0"
+                                  Margin="2"
+                                  IsEnabled="{Binding RequiresCash}"
+                                  Background="{StaticResource PrimaryHueDarkBrush}"
+                                  Foreground="{StaticResource PrimaryHueDarkForegroundBrush}"
+                                  Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                                  md:HintAssist.Hint="{lex:LocText Key=PRODUCT_ORDER_PAYMENT_METHOD}"
+                                  md:HintAssist.FloatingScale="1"
+                                  md:ComboBoxAssist.ShowSelectedItem="False"
+                                  DataContext="{Binding Order}"
+                                  SelectedValue="{Binding PaymentMethodId}"
+                                  SelectedValuePath="PaymentMethodId"
+                                  ItemsSource="{Binding PaymentMethods}">
+                            <ComboBox.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel />
+                                </ItemsPanelTemplate>
+                            </ComboBox.ItemsPanel>
+                            <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <Grid Cursor="Hand">
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition />
+                                            <ColumnDefinition Width="Auto" />
                                             <ColumnDefinition />
                                         </Grid.ColumnDefinitions>
-                                        <md:PackIcon Kind="CurrencyUsd" />
-                                        <RadioButton Grid.Column="1"
-                                                     Content="{Binding Name}"
-                                                     IsChecked="{Binding IsSelected,RelativeSource={RelativeSource AncestorType=ListBoxItem}}" />
+                                        <md:PackIcon Kind="CurrencyUsd"
+                                                     Visibility="Visible"
+                                                     VerticalAlignment="Center"
+                                                     HorizontalAlignment="Center" />
+                                        <TextBlock Grid.Column="1"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Left"
+                                                   Style="{StaticResource MaterialDesignSubheadingTextBlock}"
+                                                   Text="{Binding LocalizedName}" />
                                     </Grid>
                                 </DataTemplate>
-                            </ListBox.ItemTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
 
-                        </ListBox>
+                        <Grid Grid.Row="1"
+                              Margin="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <StackPanel Orientation="Horizontal"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Right">
+                                <TextBlock VerticalAlignment="Center"
+                                           HorizontalAlignment="Right"
+                                           Text="{lex:LocTextUpper Key=PRODUCT_ORDER_ADD_NOTE_HEADER}"
+                                           Margin="8,2,8,2"
+                                           Grid.Row="0" />
+                                <ToggleButton Margin="8"
+                                              Grid.Row="0"
+                                              IsChecked="{Binding Order.AddUserNote}" />
+                            </StackPanel>
+                            <TextBox Grid.Row="1"
+                                     Margin="2"
+                                     Padding="0"
+                                     FontSize="18"
+                                     AcceptsReturn="True"
+                                     VerticalContentAlignment="Top"
+                                     VerticalAlignment="Stretch"
+                                     HorizontalAlignment="Stretch"
+                                     Height="100"
+                                     MaxHeight="100"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                                     md:TextFieldAssist.TextFieldCornerRadius="2"
+                                     md:HintAssist.IsFloating="False"
+                                     md:TextFieldAssist.HasFilledTextField="True"
+                                     Visibility="{Binding Order.AddUserNote,Converter={StaticResource BoolToVisibilityConverter}}"
+                                     Name="_NOTE_TEXTBOX"
+                                     MaxLength="255"
+                                     Text="{Binding Order.UserNote}">
+                                <TextBox.ContextMenu>
+                                    <ContextMenu Visibility="Collapsed" />
+                                </TextBox.ContextMenu>
+                            </TextBox>
+                        </Grid>
+
                         <Button Background="YellowGreen"
                                 Grid.Row="2"
                                 BorderThickness="0"
                                 Command="{Binding Order.AcceptCommand}"
                                 Content="{lex:LocTextUpper Key=ORDER_ACTION_PLACE}" />
                     </Grid>
+
                 </Grid>
             </Border>
         </Grid>
