Small changes for 2.300 build

--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -25,9 +25,9 @@
                      HorizontalAlignment="Right">
                 <Grid>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0">
