--- a/Resources/Resources.xaml
+++ b/Resources/Resources.xaml
@@ -1595,7 +1595,8 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <Button Command="{Binding AddToOrderCommand}"
+                        <Button Command="{Binding AddWithCashCommand}"
+                                Visibility="{Binding CanPurchaseWithCash,Converter={StaticResource BoolToVisibilityConverter}}"
                                 Grid.Row="0"
                                 BorderThickness="0"
                                 Background="YellowGreen">
@@ -1614,9 +1615,8 @@
                         <Separator Grid.Row="1"
                                    Visibility="Hidden" />
                         <Button Grid.Row="2"
-                                Command="{Binding AddToOrderCommand}"
+                                Command="{Binding AddWithPointsCommand}"
                                 Visibility="{Binding CanPurchaseWithPoints,Converter={StaticResource BoolToVisibilityConverter}}"
-                                CommandParameter="True"
                                 BorderThickness="0"
                                 Background="YellowGreen">
                             <Grid>
@@ -1655,7 +1655,6 @@
                                            SharedSizeGroup="_AWARD" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-
                     <TextBlock Grid.Column="0"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Left"
@@ -1739,8 +1738,7 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-
+                        </Grid.ColumnDefinitions>   
                         <Grid.Style>
                             <Style TargetType="Grid">
                                 <Style.Triggers>
