--- a/Views/Registration/RegisterView.xaml
+++ b/Views/Registration/RegisterView.xaml
@@ -5,7 +5,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:MaterialDesignSkin.Views"
-             xmlns:lex="clr-namespace:Localization.Extensions;assembly=DataInterfaces"
              FontSize="18"
              FontWeight="Medium"
              mc:Ignorable="d"
@@ -25,6 +24,10 @@
         <md:Transitioner SelectedIndex="{Binding CurrentStepIndex,Mode=OneWay}"
                          Visibility="{Binding IsEnumerating,Converter={StaticResource BoolToVisibilityConverter},ConverterParameter=True}">
             <md:TransitionerSlide>
+                <local:RegsiterAgreementView VerticalAlignment="Center"
+                                             HorizontalAlignment="Stretch" />
+            </md:TransitionerSlide>
+            <md:TransitionerSlide>
                 <local:RegisterConfirmationView VerticalAlignment="Center"
                                                 HorizontalAlignment="Stretch" />
             </md:TransitionerSlide>
@@ -34,36 +37,12 @@
             </md:TransitionerSlide>
             <md:TransitionerSlide>
                 <local:RegisterCompleteView VerticalAlignment="Center"
-                                           HorizontalAlignment="Stretch" />
-            </md:TransitionerSlide>
-            <md:TransitionerSlide>
-                <local:RegisterConfirmErrorView VerticalAlignment="Center"
                                             HorizontalAlignment="Stretch" />
             </md:TransitionerSlide>
+            <md:TransitionerSlide>
+                <local:RegisterFailureView VerticalAlignment="Center"
+                                           HorizontalAlignment="Stretch" />
+            </md:TransitionerSlide>
         </md:Transitioner>
-
-        <StackPanel Orientation="Horizontal"
-                    VerticalAlignment="Bottom"
-                    HorizontalAlignment="Center">
-            <StackPanel.ToolTip>
-                <ToolTip Placement="Top">
-                    <ToolTip.Content>
-                        <Border>
-                            <TextBlock Foreground="Gold"
-                                       Text="Here is the agreement" />
-                        </Border>
-                    </ToolTip.Content>
-                </ToolTip>
-            </StackPanel.ToolTip>
-            <CheckBox IsChecked="True"
-                      IsEnabled="False" />
-            <TextBlock Foreground="YellowGreen"
-                       FontSize="16"
-                       Margin="8"
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Text="I agree to provide my personal info" />
-        </StackPanel>
-
     </Grid>
 </UserControl>
